refac: solves code smells